add the build config file for aws codPipline
