# docs/swagger.json
@@ -56,7 +56,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"resCode\": 0,\"message\": {\"transactionID\": 24,\"customerID\": 17,\"points\": 90,\"createdUnixTime\": 1616634980,\"expiryUnixTime\": 0}}",
+                        "description": "ok",
                         "schema": {
                             "type": "string"
                         }
@@ -102,7 +102,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"resCode\": 0,\"message\": {\"transactionID\": 24,\"customerID\": 17,\"points\": 90,\"createdUnixTime\": 1616634980,\"expiryUnixTime\": 0}}",
+                        "description": "ok",
                         "schema": {
                             "type": "string"
                         }
@@ -148,7 +148,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"resCode\": 0,\"message\": {\"transactionID\": 24,\"customerID\": 17,\"points\": 90,\"createdUnixTime\": 1616634980,\"expiryUnixTime\": 0}}",
+                        "description": "ok",
                         "schema": {
                             "type": "string"
                         }
@@ -195,7 +195,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"resCode\": 0,\"message\": {\"transactionID\": 24,\"customerID\": 17,\"points\": 90,\"createdUnixTime\": 1616634980,\"expiryUnixTime\": 0}}",
+                        "description": "ok",
                         "schema": {
                             "type": "string"
                         }
@@ -229,7 +229,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"resCode\": 0,\"message\": \"xxxxxx\"}",
+                        "description": "ok",
                         "schema": {
                             "type": "string"
                         }
@@ -261,10 +261,12 @@
             ],
             "properties": {
                 "customerID": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "13"
                 },
                 "points": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "90"
                 }
             }
         },
@@ -307,10 +309,12 @@
             ],
             "properties": {
                 "pageNo": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "0"
                 },
                 "recordsOnPage": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "10"
                 }
             }
         }
